@@ -590,6 +590,10 @@ $Torrus::DevDiscover::timeFormat = '%d-%m-%Y %H:%M';
          'name'   => 'cisco-vpdn-leaf',
          'source' => 'vendor/cisco.ios.xml'
          },
+     'CiscoIOS::cisco-3g-stats' => {
+         'name'   => 'cisco-3g-stats',
+         'source' => 'vendor/cisco.ios.xml'
+         },
      'CiscoIOS_Docsis::cisco-docsis-mac-subtree' => {
          'name'   => 'cisco-docsis-mac-subtree',
          'source' => 'vendor/cisco.ios.docsis.xml'
