@@ -1,3 +1,8 @@
+2010-11-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/CiscoIOS.pm:
+	Added CISCO-WAN-3G-MIB support
+
 2010-11-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/CiscoWLC.pm:
